--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@tailwindcss/forms": "^0.4.0",
     "cross-env": "^7.0.3",
     "cssnano": "^5.0.6",
+    "node-fetch": "^3.2.10",
     "swiper": "^8.1.6",
     "tailwindcss": "^3.0.13",
     "vanilla-lazyload": "^17.4.0"
